--- a/src/pages/addaddress/addaddress.html
+++ b/src/pages/addaddress/addaddress.html
@@ -19,14 +19,19 @@
             </ion-segment-button>-->
         </ion-segment>
     </ion-toolbar>
-
-    <div class="address-list" *ngFor="let userDt of dataUser">
+    <form #form="ngForm" class="center">
+    <div class="address-list" *ngFor="let postData of dataUser">
         <ion-list no-lines class="home-address">
             <div class="input-address" padding>
                 <p class="heading" no-margin padding-bottom>Home Address</p>
                 <ion-list no-line>
                     <ion-item>
-                        <ion-textarea value="{{userDt.address}}" placeholder="Building/Society Name & Number"> </ion-textarea>
+                        <ion-textarea  
+                            [ngModelOptions]="{ standalone: true }"    
+                            [(ngModel)]="postData.address"
+                            #address="ngModel" 
+                            value="{{postData.address}}" 
+                            placeholder="Building/Society Name & Number"> </ion-textarea>
                     </ion-item>
                    <!-- <ion-item>
                         <ion-input type="text" placeholder="Street Address, Landmark, etc."></ion-input>
@@ -34,20 +39,33 @@
                     <ion-row no-padding>
                         <ion-col no-padding>
                             <ion-item>
-                                <ion-input type="text" value="{{userDt.pincode}}" placeholder="PinCode"></ion-input>
+                                <ion-input 
+                                    type="text" 
+                                    [ngModelOptions]="{ standalone: true }"  
+                                    [(ngModel)]="postData.pincode"
+                                    #pincode="ngModel" 
+                                    value="{{postData.pincode}}" 
+                                    placeholder="PinCode"></ion-input>
                             </ion-item>
                         </ion-col>
                         <ion-col no-padding>
                             <ion-item>
-                                <ion-input type="text" value="{{userDt.city}}" placeholder="City"></ion-input>
+                                <ion-input 
+                                    type="text" 
+                                    [ngModelOptions]="{ standalone: true }"  
+                                    [(ngModel)]="postData.city" 
+                                    #city="ngModel" 
+                                    value="{{postData.city}}" 
+                                    placeholder="City"></ion-input>
                             </ion-item>
                         </ion-col>
                     </ion-row>
                 </ion-list>
-                <button ion-button full>Save Address</button>
+                <button ion-button full (click)="SaveAddress()">Save Address</button>
             </div>
         </ion-list>
 
       
     </div>
+    </form> 
 </ion-content>
