--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,32 +9,47 @@
             </div>
         </ion-slide>
     </ion-slides>
-    <p padding-left padding-right class="heading">Our Services</p>
+    <p padding-left padding-right class="heading">Click to Book Order</p>
 
     <ion-scroll scrollX style="height:165px;white-space: nowrap;">
-        <div class="scroll-item" *ngFor="let service of dataService" (click)="selectproduct(service.sid,service.serviceName)">
-            <div class="item-box">
-                <img src="http://admin.kwickwash.in/{{service.serviceImg}}" style="width: 90px; border-radius: 7%;">
-                <h5 style="font-size: 11px; color: #037DC5;" [innerHTML]="service.serviceName"></h5>               
-                <p style="color: white;">Starting ₹ {{service.startAt}} {{service.unit}}</p>
-                <p style="color: white;">Duration-{{service.duration}} hr</p>
+        <div class="scroll-item" *ngFor="let service of dataService" (click)="selectproduct(service.sid,service.serviceName)">            
+            <div class="item-box" *ngIf="service.sid!=22">               
+                <h5 style="font-size: 11px; color: #037DC5;" [innerHTML]="service.serviceName"></h5>   
+                <img src="https://admin.kwickwash.com/{{service.serviceImg}}" style="width: 90px; border-radius: 7%;">                            
+                <p style="color:black; margin-bottom: 5px;">Starting ₹ {{service.startAt}} {{service.unit}}</p>
+                <p style="color:black;">Duration-{{service.duration}} hr</p>
             </div>
         </div>
     </ion-scroll>
     
    <!--<button ion-button block (click)="bookPage()" style="width: 70%;margin-left: 15%;">Book Your Order</button>-->
    
-    <p padding-left padding-right class="heading">Active Order</p>
+    <p padding-left padding-right class="heading">My Active Order</p>
     <div padding-left padding-right class="order-list">
         <ion-list no-lines>
-            <ion-item *ngFor="let olist of orderList" (click)="GetOrderSummary(olist.orderId)">              
-                <h2 >Order No: {{olist.orderId}}</h2>
-                <p>Order Status : {{olist.deliveryStatus}}</p>
-                <ion-note item-end>₹{{olist.ttlPayableAmount}}
-                    <small>Order Date : {{olist.orderDate}}</small>
-                    <small>Delivery Date : {{olist.deliveryDate}}</small>
+            <div *ngFor="let olist of orderList" (click)="GetOrderSummary(olist.orderId)">    
+                <ion-item *ngIf="olist.deliveryStatus==''" style="background-color: #0876e0 ;">
+                    <h2>Order No: {{olist.orderId}}</h2>                
+                    <p style="color: wheat; font-weight: bold;">{{olist.deliveryStatus ===''? "Booked": olist.deliveryStatus}}</p>
+                    <ion-note item-end><h2 style="color: wheat; font-weight: bold;">₹{{olist.ttlPayableAmount}}</h2>
+                        <p style="color: wheat; font-weight: bold;">{{olist.status}}</p>
+                    </ion-note>
+                </ion-item> 
+                <ion-item *ngIf="olist.deliveryStatus=='InProcess'" style="background-color: #dcb62d;">
+                  <h2>Order No: {{olist.orderId}}</h2>                
+                  <p style="color: black; font-weight: bold;">{{olist.deliveryStatus ===''? "Booked": olist.deliveryStatus}}</p>
+                  <ion-note item-end><h2 style="color: black; font-weight: bold;">₹{{olist.ttlPayableAmount}}</h2>
+                      <p style="color: black; font-weight: bold;">{{olist.status}}</p>
+                  </ion-note>
+              </ion-item>    
+              <ion-item *ngIf="olist.deliveryStatus=='ReadyForDelivery'" style="background-color: violet;">
+                <h2>Order No: {{olist.orderId}}</h2>                
+                <p style="color: black; font-weight: bold;">{{olist.deliveryStatus ===''? "Booked": olist.deliveryStatus}}</p>
+                <ion-note item-end><h2 style="color: black; font-weight: bold;">₹{{olist.ttlPayableAmount}}</h2>
+                    <p style="color: black; font-weight: bold;">{{olist.status}}</p>
                 </ion-note>
-            </ion-item>
+              </ion-item>             
+            </div>
            
         </ion-list>
     </div>
