--- a/src/pages/otp/otp.html
+++ b/src/pages/otp/otp.html
@@ -3,12 +3,16 @@
         <ion-title>Enter OTP</ion-title>
     </ion-navbar>
 </ion-header>
+
 <ion-content padding>
+    <form #form="ngForm" class="center">
     <p text-center>Let us know One time password (OTP)<br>we'll send you OTP on your registered<br>email address or phone number</p>
     <ion-list no-lines class="form">
         <ion-item>
-            <ion-input type="number" placeholder="Enter One Time Password" text-center></ion-input>
+            <ion-input type="number" name="otp" [(ngModel)]="postData.otp" text-center></ion-input>
         </ion-item>
     </ion-list>
-    <button ion-button block (click)="signin()">Submit</button>
+    <button ion-button block (click)="loginUser()">Submit</button>
+</form>
 </ion-content>
+
